# Pixel-Material-Generation

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-18-two-stage-composition-planner.md
docs/superpowers/specs/: 2026-05-18-two-stage-composition-planner-design.md
mac/: build.sh  generate_icon.py
src/pixel_apng/: __init__.py  cli.py  composition_models.py  composition_planner.py  exporter.py  gui.py  local_parser.py  models.py  openai_parser.py  palettes.py  providers.py  renderer.py  settings_store.py  sprites.py
tests/: test_composition_planner.py  test_gui_packaging.py  test_local_parser.py  test_renderer_exporter.py
